--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,18 @@
 apply plugin: 'com.android.application'
 
 android {
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     compileSdkVersion 32
 
     defaultConfig {
-        applicationId "com.ysbing.yadb"
+        applicationId "com.sogou.yarn"
         minSdkVersion 21
         targetSdkVersion 32
-        versionCode 1
-        versionName "1.0"
+        versionCode 300
+        versionName "8.0"
     }
 }
